<resources>
    <string name="app_name">BeInfiny</string>
    <string name="accueil_message">Veuillez passer votre badge</string>
    <string name="title_activity_login">Authentification</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Connexion</string>
    <string name="action_password_in_short">Connex.</string>
    <string name="prompt_login_in_short">OK</string>
    <string name="error_invalid_password">Le mot de passe est vide</string>
    <string name="error_incorrect_password">Le mot de passe et/ou login est incorrect</string>
    <string name="error_field_required">Ce champ est obligatoire</string>
    <string name="parameters_title">Paramètres</string>
    <string name="parameters_centre">Nom du centre:</string>
    <string name="parameters_terrain">Liste des terrains:</string>
    <string name="parameters_heure_debut">Heure d\'ouverture</string>
    <string name="parameters_heure_fin">Heure de fermeture</string>
    <string name="parameters_quitter">Quitter l\'application</string>
    <string name="parameters_terrain_add_label">Ajouter un terrain:</string>
    <string name="parameters_terrain_add">Ajouter:</string>
    <string name="parameters_url">Url du serveur</string>
    <string name="parameters_save">Enregistrer les modifications</string>
    <string name="booking_terrain">Terrain:</string>
    <string name="booking_heure_debut">Heure début:</string>
    <string name="booking_duree">Durée (en heure):</string>
    <string name="booking_valider">Valider</string>
    <string name="booking_annuler">Annuler</string>
    <string name="booking_un">1</string>
    <string name="booking_deux">2</string>
    <string name="booking_trois">3</string>
    <string name="booking_quatre">4</string>
    <string name="booking_toast">Bon match</string>
    <string name="parameters_toast">Paramètres sauvegardés</string>
    <string name="accueil_toast_echec">Echec d\'identification</string>
    <string name="accueil_toast_unregistered">Utilisateur inconnu.</string>
    <string name="accueil_toast_expired">Votre abonnement est expiré.</string>
    <string name="login_title">Authentification</string>
    <string name="displayName">displayName</string>
    <string name="echecConnexion">Echec de connexion avec le serveur.</string>
    <string name="idCard">idCard</string>
    <string name="booking_echec">Une réservation existe déjà à votre nom.</string>
    <string name="parametre_retour">Retour accueil</string>
    <string name="urlImage">urlImage</string>
    <string name="noImage">Pas d\'image disponible</string>


    <!-- TODO: Remove or change this placeholder text -->
    <!--<string name="hello_blank_fragment">Hello blank fragment</string> -->
</resources>
