<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/centre_beinfiny"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="com.beinfinity.activity.ParametersActivity">

    <LinearLayout
        android:layout_width="640dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <Button
            android:id="@+id/buttonRetourAccueuil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:layout_marginTop="300dp"
            android:onClick="Back"
            android:text="@string/parametre_retour" />

        <Button
            android:id="@+id/buttonQuitterApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:layout_marginTop="20dp"
            android:onClick="LeaveApp"
            android:text="@string/parameters_quitter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="480dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="180dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginBottom="10sp"
                android:layout_row="0"
                android:text="@string/parameters_centre"
                android:textSize="@dimen/label" />

            <Spinner
                android:id="@+id/booking_spinnerCentre"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0"
                android:ems="10"
                android:textSize="@dimen/label" />

            <TextView
                android:layout_width="283dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginBottom="30sp"
                android:layout_row="1"
                android:text="@string/parameters_terrain"
                android:textSize="@dimen/label" />

        </GridLayout>

        <ListView
            android:id="@+id/listViewTerrain"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="0.43"
            android:background="@drawable/rectangle"/>


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewAjoutTerrain"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:text="@string/parameters_terrain_add_label"
                android:textSize="@dimen/label" />

            <EditText
                android:id="@+id/editTextAddTerrain"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:ems="10"
                android:inputType="text" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginBottom="30sp"
                android:layout_row="1"
                android:onClick="AddTerrain"
                android:text="@string/parameters_terrain_add" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginBottom="30sp"
                android:layout_row="2"
                android:text="@string/parameters_url"
                android:textSize="@dimen/label" />

            <EditText
                android:id="@+id/editTextUrlName"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="2"
                android:ems="10"
                android:inputType="text" />
        </GridLayout>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:onClick="SaveEntries"
            android:text="@string/parameters_save" />
    </LinearLayout>
</LinearLayout>